# makefiles

./: .gitignore  Readme.md  infisical.example  pyproject.toml
aws/: Makefile  README.md
aws/scripts/: api_gw_policy.py  budget_helper.py  cognito_roles.py  env_tool.py  lambda_routing.py
azure/: .env  .env.example  .infisical.json  Makefile  README.md
azure/scripts/: apim_policy.py  app_roles.py  assign_group_roles.py  budget_helper.py  env_tool.py  policy_defs.py  storage_web_endpoint.py
git/: Makefile  README.md
infisical/: Makefile  README.md
scripts/: clean_ui.py  git_resolve_whitespace.py  git_squash.py  infisical_sync.py  search.py
tests/: conftest.py  helpers.py  test_dryrun_aws.py  test_dryrun_azure.py  test_dryrun_git.py  test_dryrun_infisical.py  test_dryrun_utilities.py  test_integration_aws.py  test_integration_azure.py  test_integration_git.py  test_integration_infisical.py  test_mock_aws.py  test_mock_azure.py  test_mock_infisical.py
tests/shims/: aws  az  infisical  python3
utilities/: Makefile  README.md
