[project]
name = "makefiles"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest==9.0.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "dryrun: dry-run syntax validation tests",
    "mock: mock/stub command construction tests",
    "integration: live integration tests requiring credentials",
]
